--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
 
     <groupId>org.jms.rabbitmq</groupId>
     <artifactId>jms-rabbitmq</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>rabbitmq-amqp</module>
+    </modules>
 
 </project>
